FIX: Hero text homepage - align-items flex-end \!important kvuli override z nasesluzby.css

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -129,7 +129,7 @@ h6 {
   position: relative;
   height: 85vh;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-end !important;
   justify-content: center;
   overflow: hidden;
   background: #000000;
